--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-filter==2.4.0
 django-markdown==0.8.4
 django-rest-framework==0.1.0
 djangorestframework==3.12.2
+gunicorn==20.0.4
 idna==2.10
 Markdown==3.3.3
 pytz==2020.5
