--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework==3.12.2
 gunicorn==20.0.4
 idna==2.10
 Markdown==3.3.3
+psycopg2-binary==2.8.6
 pytz==2020.5
 requests==2.25.1
 sqlparse==0.4.1
