--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-filter==2.4.0
 django-markdown==0.8.4
 django-rest-framework==0.1.0
 djangorestframework==3.12.2
+gunicorn==20.0.4
 idna==2.10
 Markdown==3.3.3
 psycopg2-binary==2.8.6
@@ -14,5 +15,4 @@ pytz==2020.5
 requests==2.25.1
 sqlparse==0.4.1
 urllib3==1.26.2
-waitress==1.4.4
 whitenoise==5.2.0
